--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <!-- below line make it responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Energen-IQ</title>
-    <link rel="shortcut icon" type="image/jpg" href="./assets/logo.jpg"/>
+    <!-- <link rel="shortcut icon" type="image/jpg" href="./assets/logo.jpg"/> -->
 
     <!-- --------Font Awesome Icons------ --> 
     <link rel="stylesheet" href="./css/all.css">
